# ai-news-brief-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: profile.yaml  research_profile.yaml
docs/: virtual_environment.md
examples/: sample_article.md
prompts/: daily_digest.md  research_analysis.md
scripts/: run_daily_to_ob.ps1
src/ai_research_agent/: __main__.py  maintenance.py
src/ai_research_agent/analysis/: __init__.py  output_quality.py  pipeline.py  relevance.py  research.py
src/ai_research_agent/core/: __init__.py  config.py  errors.py  settings.py
src/ai_research_agent/ingestion/: __init__.py  articles.py  collector.py  deduplication.py  freshness.py  models.py  sources.py
src/ai_research_agent/llm/: __init__.py  client.py
src/ai_research_agent/llm/providers/: deepseek.py  gemini.py
src/ai_research_agent/pipeline/: __init__.py  daily.py  run_manifest.py
src/ai_research_agent/reporting/: __init__.py  daily_digest.py  obsidian.py  reports.py
src/ai_research_agent/storage/: __init__.py  article_registry.py  repository.py
tests/: test_cli_registry.py  test_collector.py  test_config.py  test_daily_pipeline.py  test_freshness_registry.py  test_ingestion.py  test_llm_client.py  test_maintenance.py  test_obsidian_sync.py  test_output_quality.py  test_pipeline.py  test_relevance.py  test_reporting.py
