[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-agent"
version = "0.1.0"
description = "A personal AI research intelligence system for computational social science."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Personal Research Workspace" }
]
keywords = [
  "ai",
  "research",
  "computational-social-science",
  "intelligence",
  "literature-analysis"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "requests>=2.32.3",
  "pydantic>=2.8.2",
  "pandas>=2.2.2",
  "numpy>=2.0.1",
  "networkx>=3.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.5.5"
]
gemini = [
  "google-genai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/your-username/ai-research-agent"
Repository = "https://github.com/your-username/ai-research-agent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
